    - Syntax cleanups - trailing blanks, use "is" to compare with None, etc.
      Three uses of variables not defined are changed.
    - Some script changes in trying to find scons engine
    - Update (pep8) configure-cache script, add a --show option.
    - Fix for a couple of "what if tool not found" exceptions in framework.
    - Add Textfile/Substfile to default environment. (issue #3147)

  From Bernhard M. Wiedemann:
    - Update SCons' internal scons build logic to allow overriding build date 
      with SOURCE_DATE_EPOCH for SCons itself.
    - Change the datestamps in SCons' docs and embedded in code use ISO 8601 format and UTC

  From Hao Wu
    - Typo in customized decider example in user guide
    - Replace usage of unittest.TestSuite with unittest.main() (fix #3113)

  From Arda Fu
    - Fix cpp scanner regex logic to treat ifndef for py3.5+. Previously it was 
      not properly differentiating between if, ifdef, and ifndef.


RELEASE 3.0.1 - Mon, 12 Nov 2017 15:31:33 -0700

  From Daniel Moody:
    - Jar can take multiple targets, and will make a duplicate jar from the sources for each target
    - Added some warnings in case the Jar builder makes an implicit target
    - Added Jar method and changed jar build to be more specific. Jar method will take in
      directories or classes as source. Added more tests to JAR to ensure the jar was
      packaged with the correct compiled class files.
    - Added a No result test case to handle bug which seems unrelated to java in the
      swig-dependencies.py test, more info here: http://scons.tigris.org/issues/show_bug.cgi?id=2907
    - Added a travis script to test on ubuntu trusty now that the project is on github
      so that Continuus Integration tests can be run automatically. It tests most case and considers
      no result a pass as well. Improving this script can install more dependincies allowing for more
      tests to be run.

  From Daniel Moody: